--- a/geff-tauri/src/App.css
+++ b/geff-tauri/src/App.css
@@ -20,12 +20,12 @@ body {
 .main {
   width: 100%;
   height: auto;
-  margin-top: 10px;
-  margin-left: 5px;
-  margin-right: 5px;
 }
 
 .commandline {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   background-color: var(--commandline-background-color);
   width: 100%;
   height: 1.5em;
@@ -38,19 +38,27 @@ body {
   display: flex;
   flex-direction: row;
   margin: 4px;
-  background-color: gray;
   width: fit-content;
-  padding: 10px;
+  padding: 12px;
+  border: dotted black 4px;
 }
 
 .goal-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  min-width: 100px;
+  min-height: 20px;
+}
+
+.goal-name {
+  margin: auto;
 }
 
 .goal-status {
   height: 32px;
+  max-height: 32px;
+  min-height: 32px;
   margin: auto;
 }
 
@@ -68,8 +76,22 @@ body {
   display: flex;
   flex-direction: column;
   width: auto;
+  padding-top: 10px;
+  padding-left: 5px;
+  overflow: hidden;
 }
 
 .selected-goal {
   background-color: #0262b0;
+}
+
+.status-bar {
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: gray;
+  font-size: 20px;
+  text-align: end;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
